--- a/SistemaControlDeCobranzas/capaVista/RibbonWindowExample.xaml
+++ b/SistemaControlDeCobranzas/capaVista/RibbonWindowExample.xaml
@@ -1,29 +1,32 @@
-﻿<Window
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:Custom="http://schemas.microsoft.com/winfx/2006/xaml/presentation/ribbon" 
-        x:Class="capaVista.RibbonWindowExample"
-        xmlns:r="clr-namespace:Microsoft.Windows.Controls.Ribbon.Primitives;assembly=RibbonControlsLibrary"    
-    Title="RibbonWindowExample" Height="335.106" Width="602.128">
-    <Grid>
+﻿<ribbon:RibbonWindow x:Class="capaVista.RibbonWindowExample"
+                     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                     xmlns:ribbon="clr-namespace:Microsoft.Windows.Controls.Ribbon;assembly=RibbonControlsLibrary"
+                     Title="MainWindow" x:Name="RibbonWindow" Width="640" Height="480">
 
-        <Custom:Ribbon x:Name="cintaRibbon" Title="">
-            <Custom:RibbonTab Header="RibbonTab" HorizontalAlignment="Left" Height="88" VerticalAlignment="Top" Width="592">
-                <Custom:RibbonGroup Header="RibbonGroup 1" Height="88" Margin="0" VerticalAlignment="Top">
-                    <Custom:RibbonButton Label="Guardar" LargeImageSource="Images/Actions-document-save-icon.png" Content="RibbonButton" Margin="9,10,-9,-14" Width="60" Height="53" VerticalAlignment="Top"/>
-                </Custom:RibbonGroup>
-                <Custom:RibbonGroup Header="RibbonGroup 2" Height="88" Margin="0" VerticalAlignment="Top"/>
+    <Grid x:Name="LayoutRoot">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
 
-
-            </Custom:RibbonTab>
-            <Custom:RibbonTab Header="RibbonTab 2" HorizontalAlignment="Left" Height="88" VerticalAlignment="Top" Width="592">
-                <Custom:RibbonGroup Header="RibbonGroup 2" Height="88" Margin="0" Width="100">
-                    <Custom:RibbonToggleButton Content="RibbonToggleButton" Height="100" Width="100"/>
-                </Custom:RibbonGroup>
-                <Custom:RibbonGroup Header="RibbonGroup 3" Height="88" Margin="0" Width="100"/>
-            </Custom:RibbonTab>
-
-        </Custom:Ribbon>
-
+        <ribbon:Ribbon x:Name="Ribbon" >
+            <ribbon:Ribbon.ApplicationMenu>
+                <ribbon:RibbonApplicationMenu SmallImageSource="Images\Actions-document-save-icon.png" >
+                    <ribbon:RibbonApplicationMenuItem Header="Hola _Ribbon" x:Name="MenuItem1" ImageSource="Images\Actions-document-save-icon.png"/>
+                </ribbon:RibbonApplicationMenu>
+            </ribbon:Ribbon.ApplicationMenu>
+            <ribbon:RibbonTab Header="Inicio">
+                <ribbon:RibbonGroup Header="Group1" QuickAccessToolBarId="{Binding Label}">
+                    <ribbon:RibbonButton LargeImageSource="Images\Actions-document-save-icon.png" Label="Guardar" />
+                    <ribbon:RibbonButton SmallImageSource="Images\Device-Printer-icon.png" Label="Imprimir"  />
+                    <ribbon:RibbonSplitButton  SmallImageSource="Images\Actions-document-save-icon.png" Label="Boton1" >
+                        <ribbon:RibbonMenuItem Header="Boton2" ImageSource="{x:Null}" QuickAccessToolBarImageSource="Images\Actions-document-save-icon.png"/>
+                        <ribbon:RibbonMenuItem Header="Boton2" ImageSource="Images\Actions-document-save-icon.png" QuickAccessToolBarImageSource="Images\Actions-document-save-icon.png" />
+                    </ribbon:RibbonSplitButton>
+                    <ribbon:RibbonButton SmallImageSource="Images\Actions-document-save-icon.png" Label="Button4" Click="RibbonButton_Click" />
+                </ribbon:RibbonGroup>
+            </ribbon:RibbonTab>
+        </ribbon:Ribbon>
     </Grid>
-</Window>
+</ribbon:RibbonWindow>
