--- a/SistemaControlDeCobranzas/capaVista/RibbonWindowExample.xaml
+++ b/SistemaControlDeCobranzas/capaVista/RibbonWindowExample.xaml
@@ -2,7 +2,7 @@
                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                      xmlns:ribbon="clr-namespace:Microsoft.Windows.Controls.Ribbon;assembly=RibbonControlsLibrary"
-                     Title="MainWindow" x:Name="RibbonWindow" Width="640" Height="480">
+                     Title="MainWindow" x:Name="RibbonWindow" Width="640" Height="480" WindowStyle="ThreeDBorderWindow" WindowStartupLocation="CenterScreen" WindowState="Maximized">
 
     <Grid x:Name="LayoutRoot">
         <Grid.RowDefinitions>
@@ -25,6 +25,18 @@
                         <ribbon:RibbonMenuItem Header="Boton2" ImageSource="Images\Actions-document-save-icon.png" QuickAccessToolBarImageSource="Images\Actions-document-save-icon.png" />
                     </ribbon:RibbonSplitButton>
                     <ribbon:RibbonButton SmallImageSource="Images\Actions-document-save-icon.png" Label="Button4" Click="RibbonButton_Click" />
+                </ribbon:RibbonGroup>
+            </ribbon:RibbonTab>
+
+            <ribbon:RibbonTab Header="Tab 2">
+                <ribbon:RibbonGroup Header="Group2" QuickAccessToolBarId="{Binding Label}">
+                    <ribbon:RibbonButton LargeImageSource="Images\Actions-document-save-icon.png" Label="Guardar2" />
+                    <ribbon:RibbonButton SmallImageSource="Images\Device-Printer-icon.png" Label="Imprimir2"  />
+                    <ribbon:RibbonSplitButton  SmallImageSource="Images\Actions-document-save-icon.png" Label="btPrueba" >
+                        <ribbon:RibbonMenuItem Header="btPrueba1" ImageSource="{x:Null}" QuickAccessToolBarImageSource="Images\Actions-document-save-icon.png"/>
+                        <ribbon:RibbonMenuItem Header="btPrueba2" ImageSource="Images\Actions-document-save-icon.png" QuickAccessToolBarImageSource="Images\Actions-document-save-icon.png" />
+                    </ribbon:RibbonSplitButton>
+                    <ribbon:RibbonButton SmallImageSource="Images\Actions-document-save-icon.png" Label="btPrueba3" Click="RibbonButton_Click" />
                 </ribbon:RibbonGroup>
             </ribbon:RibbonTab>
         </ribbon:Ribbon>
