--- a/SistemaControlDeCobranzas/capaVista/MainWindow.xaml
+++ b/SistemaControlDeCobranzas/capaVista/MainWindow.xaml
@@ -5,7 +5,7 @@
                       xmlns:Custom="http://schemas.microsoft.com/winfx/2006/xaml/presentation/ribbon" x:Class="capaVista.MainWindow"
                       Title="Sistema de prestamos"
                       Height="350"
-                      Width="525">
+                      Width="525" WindowStartupLocation="CenterScreen" ShowMinButton="False" ShowActivated="False" ShowIconOnTitleBar="False" ShowMaxRestoreButton="False">
     <Grid Background="#FFE9EAEC">
         <Rectangle Fill="#0083b9" HorizontalAlignment="Left" Width="150"/>
         <Polygon
@@ -29,7 +29,7 @@
         <TextBox HorizontalAlignment="Left" Height="23" Margin="180,100,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="305" Background="#FFE9EAEC" BorderBrush="#FF086F9E" BorderThickness="1" CaretBrush="#FF086F9E" CharacterCasing="Upper" Foreground="#FF8B8B8B"/>
         <Label Content="Contraseña" HorizontalAlignment="Left" Margin="180,140,0,0" VerticalAlignment="Top" Foreground="#CC212C3D" FontSize="16" FontFamily="Arial Narrow"/>
         <PasswordBox HorizontalAlignment="Left" Margin="180,173,0,0" VerticalAlignment="Top" RenderTransformOrigin="-2.5,1.731" Width="305" Background="#FFE9EAEC" BorderBrush="#FF086F9E" Foreground="#FF8B8B8B"/>
-        <Button Content="Ingresar" HorizontalAlignment="Left" Margin="180,225,0,0" VerticalAlignment="Top" Width="305" Height="45" Background="#FF0083B9" Foreground="#FFFFF9F9" FontSize="18" BorderBrush="#FF086F9E"/>
+        <Button Content="Ingresar" HorizontalAlignment="Left" Margin="180,225,0,0" VerticalAlignment="Top" Width="305" Height="45" Background="#FF0083B9" Foreground="#FFFFF9F9" FontSize="18" BorderBrush="#FF086F9E" Click="Button_Click"/>
        
     </Grid>
 </Controls:MetroWindow>
