--- a/SistemaControlDeCobranzas/capaVista/App.xaml
+++ b/SistemaControlDeCobranzas/capaVista/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="capaVista.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="RibbonWindowExample.xaml">
+             StartupUri="mainwindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
