--- a/SistemaControlDeCobranzas/capaVista/MainWindow.xaml
+++ b/SistemaControlDeCobranzas/capaVista/MainWindow.xaml
@@ -2,42 +2,42 @@
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
-                      Title="MainWindow"
+                      Title="Acceso"
                       Height="350"
-                      Width="525">
+                      Width="525" 
+                      AllowsTransparency="True" 
+                      WindowStyle="None" 
+                      GlowBrush="{DynamicResource AccentColorBrush}"
+                      WindowStartupLocation="CenterScreen" TitleCaps="False">
 
     <Grid>
 
 
-    <Grid Background="#FFE9EAEC">
-        <Rectangle Fill="#0083b9" HorizontalAlignment="Left" Width="150"/>
-        <Polygon
-    Points="300,200 400,115 400,275 300,200"
-    Stroke="#FF0082B6" 
-    StrokeThickness="2" Margin="149,25,0,274" HorizontalAlignment="Left" FlowDirection="RightToLeft" RenderTransformOrigin="0.5,0.5" UseLayoutRounding="False" StrokeStartLineCap="Square" Stretch="Fill" Width="15">
-            <Polygon.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleY="-1" ScaleX="1"/>
-                    <SkewTransform AngleY="0" AngleX="0"/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Polygon.RenderTransform>
-            <Polygon.Fill>
-                <SolidColorBrush Color="#0082B6" />
-            </Polygon.Fill>
-        </Polygon>
-        <Label Content="Credenciales, por favor" HorizontalAlignment="Left" Margin="180,19,0,0" VerticalAlignment="Top" Foreground="#CC212C3D" FontSize="18" FontFamily="Arial Narrow"/>
-        <Label Content="Usuario" HorizontalAlignment="Left" Margin="180,72,0,0" VerticalAlignment="Top" Foreground="#CC212C3D" FontSize="16" FontFamily="Arial Narrow"/>
-        <TextBox x:Name="txtbu" HorizontalAlignment="Left" Height="23" Margin="180,100,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="305" Background="#FFE9EAEC" BorderBrush="#FF086F9E" BorderThickness="1" CaretBrush="#FF086F9E" CharacterCasing="Upper" Foreground="#FF8B8B8B"/>
-        <Label Content="Contraseña" HorizontalAlignment="Left" Margin="180,140,0,0" VerticalAlignment="Top" Foreground="#CC212C3D" FontSize="16" FontFamily="Arial Narrow"/>
+        <Grid Background="#FFE9EAEC">
+            <Rectangle HorizontalAlignment="Left" Width="150" Fill="#CC119EDA"/>
+            <Polygon
+    Points="300,200 400,115 400,275 300,200" 
+    StrokeThickness="2" Margin="149.695,23.312,0,277.977" HorizontalAlignment="Left" FlowDirection="RightToLeft" RenderTransformOrigin="0.5,0.5" UseLayoutRounding="False" StrokeStartLineCap="Square" Stretch="Fill" Width="20.426" Fill="#CC119EDA">
+                <Polygon.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform ScaleY="-1" ScaleX="1"/>
+                        <SkewTransform AngleY="0" AngleX="0"/>
+                        <RotateTransform Angle="0"/>
+                        <TranslateTransform/>
+                    </TransformGroup>
+                </Polygon.RenderTransform>
+            </Polygon>
+            <Label Content="Credenciales, por favor" HorizontalAlignment="Left" Margin="180,19,0,0" VerticalAlignment="Top" Foreground="#CC212C3D" FontSize="18" FontFamily="Arial Narrow"/>
+            <Label Content="Usuario" HorizontalAlignment="Left" Margin="180,72,0,0" VerticalAlignment="Top" Foreground="#CC212C3D" FontSize="16" FontFamily="Arial Narrow"/>
+            <TextBox Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Usuario" x:Name="tbUsername" HorizontalAlignment="Left" Height="23" Margin="180,100,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="305" Background="#FFE9EAEC" BorderBrush="#FF086F9E" BorderThickness="1" CaretBrush="#FF086F9E" CharacterCasing="Upper" Foreground="#FF8B8B8B"/>
+            <Label Content="Contraseña" HorizontalAlignment="Left" Margin="180,140,0,0" VerticalAlignment="Top" Foreground="#CC212C3D" FontSize="16" FontFamily="Arial Narrow"/>
 
-        <PasswordBox HorizontalAlignment="Left" Margin="180,173,0,0" VerticalAlignment="Top" RenderTransformOrigin="-2.5,1.731" Width="305" Background="#FFE9EAEC" BorderBrush="#FF086F9E" Foreground="#FF8B8B8B"/>
+            <PasswordBox HorizontalAlignment="Left" Margin="180,173,0,0" VerticalAlignment="Top" RenderTransformOrigin="-2.5,1.731" Width="305" Background="#FFE9EAEC" BorderBrush="#FF086F9E" Foreground="#FF8B8B8B"/>
 
-       <PasswordBox Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Contraseña"  HorizontalAlignment="Left" Margin="180,173,0,0" VerticalAlignment="Top" RenderTransformOrigin="-2.5,1.731" Width="305" Background="#FFE9EAEC" BorderBrush="#FF086F9E" Foreground="#FF8B8B8B"/>
+            <PasswordBox x:Name="tbPassword" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Contraseña"  HorizontalAlignment="Left" Margin="180,173,0,0" VerticalAlignment="Top" RenderTransformOrigin="-2.5,1.731" Width="305" Background="#FFE9EAEC" BorderBrush="#FF086F9E" Foreground="#FF8B8B8B"/>
 
-        <Button Content="Ingresar" HorizontalAlignment="Left" Margin="180,225,0,0" VerticalAlignment="Top" Width="305" Height="45" Background="#FF0083B9" Foreground="#FFFFF9F9" FontSize="18" BorderBrush="#FF086F9E" Click="Button_Click"/>
+            <Button x:Name="button" Style="{StaticResource AccentedSquareButtonStyle}" Content="Ingresar" HorizontalAlignment="Left" Margin="180,225,0,0" VerticalAlignment="Top" Width="305" Height="45" FontSize="18" Click="Button_Click"/>
 
-    </Grid>
+        </Grid>
     </Grid>
 </Controls:MetroWindow>
