--- a/SistemaControlDeCobranzas/capaVista/MainWindow.xaml
+++ b/SistemaControlDeCobranzas/capaVista/MainWindow.xaml
@@ -38,6 +38,10 @@
 
             <Button x:Name="button" Style="{StaticResource AccentedSquareButtonStyle}" IsDefault="True" Content="Ingresar" HorizontalAlignment="Left" Margin="180,225,0,0" VerticalAlignment="Top" Width="305" Height="45" FontSize="18" Click="Button_Click"/>
 
+            <Grid x:Name="progress" HorizontalAlignment="Left" Height="46" Margin="237,294,0,0" VerticalAlignment="Top" Width="174">
+                <Controls:ProgressRing x:Name="prog_ring_star" Height="46" Margin="57,0"   />
+            </Grid>
+
         </Grid>
     </Grid>
 </Controls:MetroWindow>
